@startuml
!theme plain
title Cursor Cloud Agents Client Module - Class Diagram

package "info.jab.cursor.client" {
  interface CursorAgentManagement {
    + launch(String, String, String, boolean): AgentResponse
    + delete(String): DeleteAgentResponse
  }
  
  interface CursorAgentInformation {
    + getStatus(String): AgentStatus
    + getConversation(String): ConversationResponse
  }
  
  interface CursorAgentGeneralEndpoints {
    + getModels(): AgentsList
    + getRepositories(): AgentsList
  }
}

package "info.jab.cursor.client.impl" {
  class CursorAgentManagementImpl {
    - apiKey: String
    - defaultApi: DefaultApi
    + launch(String, String, String, boolean): AgentResponse
    + delete(String): DeleteAgentResponse
  }
  
  class CursorAgentInformationImpl {
    - apiKey: String
    - defaultApi: DefaultApi
    + getStatus(String): AgentStatus
    + getConversation(String): ConversationResponse
  }
  
  class CursorAgentGeneralEndpointsImpl {
    - apiKey: String
    - defaultApi: DefaultApi
    + getModels(): AgentsList
    + getRepositories(): AgentsList
  }
}

package "info.jab.cursor.client.model" {
  class AgentResponse {
    + id: String
    + status: AgentStatus
  }
  
  class DeleteAgentResponse {
    + success: boolean
    + message: String
  }
  
  class FollowUpResponse {
    + id: String
    + status: AgentStatus
  }
  
  class ConversationResponse {
    + messages: List<ConversationMessage>
  }
  
  class ConversationMessage {
    + role: String
    + content: String
  }
  
  class AgentsList {
    + items: List<String>
  }
  
  class ApiKeyInfo {
    + apiKey: String
  }
  
  enum AgentStatus {
    CREATING
    RUNNING
    SUCCESS
    ERROR
    CANCELLED
  }
  
  class Source {
    + type: String
    + content: String
  }
  
  class Target {
    + type: String
    + content: String
  }
}

' Relationships
CursorAgentManagementImpl ..|> CursorAgentManagement
CursorAgentInformationImpl ..|> CursorAgentInformation
CursorAgentGeneralEndpointsImpl ..|> CursorAgentGeneralEndpoints

CursorAgentManagementImpl --> AgentResponse : returns
CursorAgentManagementImpl --> DeleteAgentResponse : returns
CursorAgentInformationImpl --> AgentStatus : returns
CursorAgentInformationImpl --> ConversationResponse : returns
CursorAgentGeneralEndpointsImpl --> AgentsList : returns

AgentResponse --> AgentStatus : contains
FollowUpResponse --> AgentStatus : contains
ConversationResponse --> ConversationMessage : contains

@enduml
